overlay issues on mobile device testing Probably the next few pushes will be to update the vercel link so that I can see and test the app on a physical device and change things as needed.

--- a/src/Components/Collections/HomePage/Navbar/Navbar.module.css
+++ b/src/Components/Collections/HomePage/Navbar/Navbar.module.css
@@ -223,7 +223,7 @@ a {
         z-index: 10;
         transition: 0.25s;
         left: 0%;
-        margin-top: -3px;
+        margin-top: 72px;
    }
 
    .slideMenuInactive {
@@ -235,13 +235,13 @@ a {
         z-index: 10;
         transition: 0.25s;
         left: 100%;
-        margin-top: -3px;
+        margin-top: 72px;
    }
 
    .slideMenuContainer {
         display: flex;
         height: 568px;
-        padding: 120px 40px 40px 40px;
+        padding: 0px 40px 40px 40px;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
